# cookiecutter-pypackage

./: CHANGELOG.md  LICENSE  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  .python-version  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  tox.ini  {% if cookiecutter.license=='Apache-2.0' %}NOTICE{% endif %}
{{ cookiecutter.project_slug }}/.github/workflows/: check.yml  docs.yml  release.yml
{{ cookiecutter.project_slug }}/docs/: mkdocs.yml
{{ cookiecutter.project_slug }}/docs/src/: index.md
{{ cookiecutter.project_slug }}/docs/src/about/: help.md
{{ cookiecutter.project_slug }}/docs/src/getting-started/: install.md
{{ cookiecutter.project_slug }}/docs/src/learn/: cli.md
{{ cookiecutter.project_slug }}/scripts/: get_latest_release_notes.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.pkg_name }}/: {% if cookiecutter.cli %}_cli.py{% endif %}
{{ cookiecutter.project_slug }}/tests/: test_cli.py  test_package.py  {% if cookiecutter.cli %}test_cli.py{% endif %}
